--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_secure_storage: ^4.2.1
   http: ^1.2.1
+  loading_animation_widget: ^1.2.1
   riverpod_annotation: ^2.3.3
 
 dev_dependencies:
