--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -52,5 +52,5 @@ jobs:
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT_TOKEN }}
         publish_dir: ./
