--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
@@ -52,5 +54,4 @@ jobs:
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        token: ${{ secrets.PAT_TOKEN }}
         publish_dir: ./
