--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.pat }}
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
