--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_secure_storage: ^4.2.1
+  go_router: ^13.2.4
   http: ^1.2.1
   loading_animation_widget: ^1.2.1
   riverpod_annotation: ^2.3.3
