--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.1
   loading_animation_widget: ^1.2.1
   riverpod_annotation: ^2.3.3
+  tmdb_api: ^2.2.0
 
 dev_dependencies:
   build_runner: ^2.4.8
