--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  another_flutter_splash_screen: ^1.2.0
   cupertino_icons: ^1.0.6
   equatable: ^2.0.5
   flutter:
@@ -40,6 +41,7 @@ dependencies:
   http: ^1.2.1
   loading_animation_widget: ^1.2.1
   riverpod_annotation: ^2.3.3
+  shared_preferences: ^2.2.3
   tmdb_api: ^2.2.0
 
 dev_dependencies:
@@ -67,7 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
