add navagation rail

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   another_flutter_splash_screen: ^1.2.0
   cupertino_icons: ^1.0.6
+  dynamic_color: ^1.7.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -39,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   go_router: ^13.2.4
   http: ^1.2.1
+  layout: ^1.0.5
   loading_animation_widget: ^1.2.1
   riverpod_annotation: ^2.3.3
   shared_preferences: ^2.2.3
