--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -14,42 +14,51 @@ jobs:
     name: Create Web Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: checkout 
+        uses: actions/checkout@v4.1.0
+        
+      - name: setup java
+        uses: actions/setup-java@v3.13.0
+
+      - name: build gradle
+        run: ./gradlew build
+
+      - name: upload a build artifact
+        uses: actions/upload-artifact@v3.1.3
         with:
-          distribution: 'zulu'
-          java-version: "12.x"
-          cache: gradle
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.19.6"
-          channel: 'stable'
-          cache: true
+          name: movie.apk
+          path: app/build/outputs/apk/app-debug.apk
+        
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: "3.19.6"
+  #         channel: 'stable'
+  #         cache: true
       
-      - name: Get dependencies
-        run: flutter pub get
+  #     - name: Get dependencies
+  #       run: flutter pub get
 
-      - name: Start Web Release Build
-        run: flutter build web --release
+  #     - name: Start Web Release Build
+  #       run: flutter build web --release
      
-      - name: Upload Web Build Files
-        uses: actions/upload-artifact@v2
-        with:
-          name: web-release
-          path: ./build/web
+  #     - name: Upload Web Build Files
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: web-release
+  #         path: ./build/web
 
-  deploy:
-    name: Deploy Web Build
-    needs: build
-    runs-on: ubuntu-latest
+  # deploy:
+  #   name: Deploy Web Build
+  #   needs: build
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Download Web Release
-      uses: actions/download-artifact@v2
-      with:
-        name: web-release
+  #   steps:
+  #   - name: Download Web Release
+  #     uses: actions/download-artifact@v2
+  #     with:
+  #       name: web-release
 
-    - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        publish_dir: ./
+  #   - name: Deploy to gh-pages
+  #     uses: peaceiris/actions-gh-pages@v3
+  #     with:
+  #       publish_dir: ./
