--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -15,16 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout 
-        uses: actions/checkout@v4.1.0
+        uses: actions/checkout@v4.1.4
         
       - name: setup java
-        uses: actions/setup-java@v3.13.0
+        uses: actions/setup-java@v4.2.1
+        with: 
+          distribution: 'adopt'
 
       - name: build gradle
         run: ./gradlew build
 
       - name: upload a build artifact
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v4.3.3
         with:
           name: movie.apk
           path: app/build/outputs/apk/app-debug.apk
