--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,7 +19,8 @@ jobs:
         
       - name: setup java
         uses: actions/setup-java@v4.2.1
-        with: 
+        with:
+          java-version: '8'
           distribution: 'adopt'
 
       - name: build gradle
