--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '3.19.6'
+          token: ${{ secrets.TOKEN }}
 
       - run: flutter pub get
       - run: flutter build apk --debug --split-per-abi
