--- a/.github/workflows/main_infs803-movie-web-app.yml
+++ b/.github/workflows/main_infs803-movie-web-app.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.3.10'
+          flutter-version: 'stable'
 
       - name: Install dependencies
         run: flutter pub get
@@ -65,4 +65,3 @@ jobs:
           app-name: 'INFS803-Movie-Web-App'
           slot-name: 'Production'
           package: build/web
-          
